--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
-    "cortex-debug.armToolchainPath": "/home/pan/compiler/arm-gnu-toolchain/bin",
-    "cortex-debug.JLinkGDBServerPath": "/opt/SEGGER/JLink/JLinkGDBServer",
+    "cortex-debug.armToolchainPath": "C:/msys64/mingw64/bin/",
+    "cortex-debug.JLinkGDBServerPath": "C:/Program Files (x86)/SEGGER/JLink_V722b/JLinkGDBServer.exe",
     // 是否检查插件冲突
     "clangd.detectExtensionConflicts": true,
     "clangd.arguments": [
@@ -16,7 +16,7 @@
         "--function-arg-placeholders=false",
         // compelie_commands.json 文件的目录位置(相对于工作区，由于 CMake 生成的该文件默认在 build 文件夹中，故设置为 build)
         "--compile-commands-dir=build/Debug",
-        "--query-driver=/home/pan/compiler/arm-gnu-toolchain/bin/arm-none-eabi-gcc"
+        "--query-driver=C:/msys64/mingw64/bin/arm-none-eabi-gcc.exe"
         
     ],
     "cmake.ignoreCMakeListsMissing": true,
