添加bmi088模块，并修复bsp_spi 函数bug

--- a/modules/CMakeLists.txt
+++ b/modules/CMakeLists.txt
@@ -6,6 +6,7 @@ add_library(modules STATIC
         algorithm/LQR.c 
         algorithm/QuaternionEKF.c 
         algorithm/user_lib.c 
+        BMI088/BMI088.c
 )
 
 # 设置包含目录
@@ -13,6 +14,7 @@ target_include_directories(modules
         PUBLIC
         ${CMAKE_CURRENT_SOURCE_DIR}/RGB
         ${CMAKE_CURRENT_SOURCE_DIR}/algorithm
+        ${CMAKE_CURRENT_SOURCE_DIR}/BMI088
 )
 
 # 链接必要的库
