--- a/modules/CMakeLists.txt
+++ b/modules/CMakeLists.txt
@@ -9,6 +9,8 @@ add_library(modules STATIC
         BMI088/BMI088.c
         systemwatch/systemwatch.c
         offline/offline.c
+        IMU/imu_task.c 
+        IMU/imu.c
 )
 
 # 设置包含目录
@@ -19,6 +21,7 @@ target_include_directories(modules
         ${CMAKE_CURRENT_SOURCE_DIR}/BMI088
         ${CMAKE_CURRENT_SOURCE_DIR}/systemwatch
         ${CMAKE_CURRENT_SOURCE_DIR}/offline
+        ${CMAKE_CURRENT_SOURCE_DIR}/IMU
 )
 
 # 链接必要的库
