--- a/modules/CMakeLists.txt
+++ b/modules/CMakeLists.txt
@@ -18,6 +18,7 @@ add_library(modules STATIC
         MOTOR/motor_task.c
         MOTOR/DJI/dji.c 
         MOTOR/DAMIAO/damiao.c 
+        powercontrol/powercontrol.c
 )
 
 # 设置包含目录
@@ -34,6 +35,7 @@ target_include_directories(modules
         ${CMAKE_CURRENT_SOURCE_DIR}/MOTOR 
         ${CMAKE_CURRENT_SOURCE_DIR}/MOTOR/DJI 
         ${CMAKE_CURRENT_SOURCE_DIR}/MOTOR/DAMIAO 
+        ${CMAKE_CURRENT_SOURCE_DIR}/powercontrol
 )
 
 # 链接必要的库
