添加板间通讯

--- a/modules/CMakeLists.txt
+++ b/modules/CMakeLists.txt
@@ -20,6 +20,7 @@ add_library(modules STATIC
         MOTOR/DAMIAO/damiao.c 
         powercontrol/powercontrol.c
         DM_IMU/dm_imu.c
+        board_com/board_com.c
 )
 
 # 设置包含目录
@@ -38,6 +39,7 @@ target_include_directories(modules
         ${CMAKE_CURRENT_SOURCE_DIR}/MOTOR/DAMIAO 
         ${CMAKE_CURRENT_SOURCE_DIR}/powercontrol
         ${CMAKE_CURRENT_SOURCE_DIR}/DM_IMU
+        ${CMAKE_CURRENT_SOURCE_DIR}/board_com
 )
 
 # 链接必要的库
