更新离线检测模块，修改配置和状态定义，添加函数注释，完善文档示例

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
-    "cortex-debug.armToolchainPath": "C:/msys64/mingw64/bin/",
-    "cortex-debug.JLinkGDBServerPath": "C:/Program Files (x86)/SEGGER/JLink_V722b/JLinkGDBServer.exe",
+    "cortex-debug.armToolchainPath": "D:/code/toolchain/arm-gnu-toolchain/bin",
+    "cortex-debug.JLinkGDBServerPath": "C:/Program Files/SEGGER/JLink_V840/JLinkGDBServer.exe",
     // 是否检查插件冲突
     "clangd.detectExtensionConflicts": true,
     "clangd.arguments": [
